# stdexec

./: CMakeLists.txt
modules/: CMakeLists.txt  stdexec.cppm
modules_demo/: CMakeLists.txt  main.cpp
